scripts/nullaway/annotator/url0067cdd33d_goldolphin_Mi_tgz-pJ8-mi_regex_CommonJ8.txt
../annotator/url0067cdd33d_goldolphin_Mi_tgz-pJ8-mi_regex_CommonJ8/src/mi/legacy/parser/Transition.java:15: error: [NullAway] assigning @Nullable expression to @NonNull field
        this.target = target;
                    ^
    (see http://t.uber.com/nullaway )
../annotator/url0067cdd33d_goldolphin_Mi_tgz-pJ8-mi_regex_CommonJ8/src/mi/common/CharHashMap.java:151: error: [NullAway] returning @Nullable expression from method with @NonNull return type
            return value;
            ^
    (see http://t.uber.com/nullaway )
../annotator/url0067cdd33d_goldolphin_Mi_tgz-pJ8-mi_regex_CommonJ8/src/mi/common/CharHashMap.java:176: error: [NullAway] dereferenced expression current is @Nullable
            current = current.next;
                             ^
    (see http://t.uber.com/nullaway )
../annotator/url0067cdd33d_goldolphin_Mi_tgz-pJ8-mi_regex_CommonJ8/src/mi/legacy/regex/AbstractRegex.java:9: error: [NullAway] @NonNull field next not initialized
    protected AbstractRegex next;
                            ^
    (see http://t.uber.com/nullaway )
../annotator/url0067cdd33d_goldolphin_Mi_tgz-pJ8-mi_regex_CommonJ8/src/mi/task/SynchronizedScheduler.java:14: error: [NullAway] passing @Nullable parameter 'state' where @NonNull is required
        task.onExecute(state, cont, previous, this);
                       ^
    (see http://t.uber.com/nullaway )
../annotator/url0067cdd33d_goldolphin_Mi_tgz-pJ8-mi_regex_CommonJ8/src/mi/stack/LinkedStack.java:26: error: [NullAway] dereferenced expression top is @Nullable
        T data = top.data;
                    ^
    (see http://t.uber.com/nullaway )
../annotator/url0067cdd33d_goldolphin_Mi_tgz-pJ8-mi_regex_CommonJ8/src/mi/regex/AbstractRegex.java:11: error: [NullAway] @NonNull field next not initialized
    protected AbstractRegex next;
                            ^
    (see http://t.uber.com/nullaway )
../annotator/url0067cdd33d_goldolphin_Mi_tgz-pJ8-mi_regex_CommonJ8/src/mi/regex/GroupRegex.java:15: error: [NullAway] initializer method does not guarantee @NonNull field clause (line 12) is initialized along all control-flow paths (remember to check for exceptions or early returns).
    public GroupRegex(int n) {
           ^
    (see http://t.uber.com/nullaway )
../annotator/url0067cdd33d_goldolphin_Mi_tgz-pJ8-mi_regex_CommonJ8/src/mi/match/ACSearcher.java:32: error: [NullAway] dereferenced expression current is @Nullable
            if (current.pattern != null) {
                       ^
    (see http://t.uber.com/nullaway )
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
9 errors
